cluster/apps/karakeep/meilisearch-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karakeep-meilisearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karakeep-meilisearch
  template:
    metadata:
      labels:
        app: karakeep-meilisearch
    spec:
      containers:
        - name: karakeep-meilisearch
          image: getmeili/meilisearch:v1.11.1
          volumeMounts:
            - mountPath: /meili_data
              name: karakeep-meilisearch
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: karakeep-meilisearch
          persistentVolumeClaim:
            claimName: pvc-karakeep-meilisearch
