cluster/apps/karakeep/web-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karakeep-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karakeep-web
  template:
    metadata:
      labels:
        app: karakeep-web
    spec:
      containers:
        - name: karakeep-web
          image: ghcr.io/karakeep-app/karakeep
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /data
              name: karakeep-data
          resources:
            requests:
              cpu: 250m
              memory: 1024Mi
            limits:
              cpu: 500m
              memory: 2048Mi
      volumes:
        - name: karakeep-data
          persistentVolumeClaim:
            claimName: pvc-karakeep-data
