cluster/apps/karakeep/meilisearch-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: karakeep-meilisearch
spec:
  selector:
    app: karakeep-meilisearch
  ports:
    - protocol: TCP
      port: 7700
      targetPort: 7700
  type: ClusterIP
